@@ -1,7 +1,4 @@
-FROM openjdk:8-jre-alpine
-
+FROM openjdk:9-jre-slim
 EXPOSE 8080
-
-ENTRYPOINT ["java", "-jar", "spring-rabbitmq-dead-letter-queue-example.jar"]
-
 ADD target/spring-rabbitmq-dead-letter-queue-example.jar spring-rabbitmq-dead-letter-queue-example.jar
+ENTRYPOINT ["java", "-jar", "-Dfile.encoding=UTF-8", "-Djava.security.egd=file:/dev/./urandom", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "spring-rabbitmq-dead-letter-queue-example.jar"]
